--- a/UnitTests/SharedTestFixtures/SharedTestFixtures.csproj
+++ b/UnitTests/SharedTestFixtures/SharedTestFixtures.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Dapper, Version=1.60.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Dapper.1.60.6\lib\net451\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="Elmah, Version=1.2.14706.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MSTest.TestFramework.1.4.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -66,6 +67,7 @@
       <HintPath>..\..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -90,6 +92,11 @@
     <Compile Include="DatabaseCollection.cs" />
     <Compile Include="DatabaseFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestUtils\ContextTestUtils.cs" />
+    <Compile Include="TestUtils\ControllerTestUtils.cs" />
+    <Compile Include="TestUtils\FakeOrganizationUtils.cs" />
+    <Compile Include="TestUtils\FakeRequestManager.cs" />
+    <Compile Include="TestUtils\SpecialContentUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -102,6 +109,14 @@
     <ProjectReference Include="..\..\CmsData\CmsData.csproj">
       <Project>{98aee43c-4226-49e7-bd46-c1a85467eced}</Project>
       <Name>CmsData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\CmsWeb\CMSWeb.csproj">
+      <Project>{fc942d51-94b5-456b-9683-0ba000a1eaf4}</Project>
+      <Name>CMSWeb</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ImageData\ImageData.csproj">
+      <Project>{512DA381-E81B-4121-B978-FC850EC88353}</Project>
+      <Name>ImageData</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\UtilityExtensions\UtilityExtensions.csproj">
       <Project>{C504E3D2-5498-451B-BF82-309623706F11}</Project>
