--- a/CmsData/CmsData.csproj
+++ b/CmsData/CmsData.csproj
@@ -1444,6 +1444,7 @@
     <Content Include="Migrations\20190828_Create_Func_PledgesSummary.sql" />
     <Content Include="Migrations\20191009_alter_func_SpouseId.sql" />
     <Content Include="Migrations\20191015_Update_MaritalStatus_Families_People_SpouseId.sql" />
+    <Content Include="Migrations\20191029_Alt_View_OrgsWithoutFees.sql" />
     <Content Include="Migrations\20191017_Alt_Func_PledgesSummary.sql" />
     <Content Include="QueryBuilder\CompareMap.xml">
       <SubType>Designer</SubType>
